added some static analysis tool

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,5 @@ framework = cmsis
 upload_protocol = stlink
 debug_tool = stlink
 build_type = debug
+check_tool = cppcheck
+check_flags = cpp_check: --enable=all
